--- a/_layouts/people.html
+++ b/_layouts/people.html
@@ -10,7 +10,6 @@
 </head>
 
 <body>
-  {% include head.html %}
 
   <div class="container mt-5">
     <h1>{{ page.title }}</h1>
@@ -28,7 +27,7 @@
             </div>
           </div>
         </div>
-        {% if (forloop.index | modulo: 3) == 0 %}
+        {% if forloop.index | modulo: 3== 0 %}
           <div class="w-100"></div> <!-- 在每三个卡片后创建一个新的行 -->
         {% endif %}
       {% endfor %}
