--- a/_sass/addon/commons.scss
+++ b/_sass/addon/commons.scss
@@ -71,7 +71,7 @@ a {
 img {
   max-width: 100%;
   height: auto;
-  transition: all 0.35s ease-in-out;
+  /* transition: all 0.35s ease-in-out; */
 
   .blur & {
     $blur: 20px;
@@ -508,42 +508,6 @@ main {
   display: inline-flex;
 }
 
-.shimmer {
-  overflow: hidden;
-  position: relative;
-  background: var(--img-bg);
-
-  &::before {
-    content: '';
-    position: absolute;
-    background: var(--shimmer-bg);
-    height: 100%;
-    width: 100%;
-    -webkit-animation: shimmer 1.3s infinite;
-    animation: shimmer 1.3s infinite;
-  }
-
-  @-webkit-keyframes shimmer {
-    0% {
-      transform: translateX(-100%);
-    }
-
-    100% {
-      transform: translateX(100%);
-    }
-  }
-
-  @keyframes shimmer {
-    0% {
-      transform: translateX(-100%);
-    }
-
-    100% {
-      transform: translateX(100%);
-    }
-  }
-}
-
 .embed-video {
   width: 100%;
   height: 100%;
@@ -720,7 +684,7 @@ $btn-mb: 0.5rem;
     transform: translateZ(0); /* fixed the zoom in Safari */
 
     img {
-      transition: transform 0.5s;
+      /*transition: transform 0.5s;*/
 
       &:hover {
         transform: scale(1.2);
