--- a/templates/2023-12-01-post-template.html
+++ b/templates/2023-12-01-post-template.html
@@ -164,20 +164,20 @@ _Image Caption_
 2
 3
 </pre></td><td class="rouge-code"><pre>---
-img_path: /img/path/
+img_path: /assets/img/activities
 ---
 </pre></td></tr></tbody></table></code></pre></div></div>
 
 <p>And then, the image source of Markdown can write the file name directly:</p>
 
 <div class="language-plaintext highlighter-rouge"><div class="highlight"><pre class="highlight"><code><table class="rouge-table"><tbody><tr><td class="rouge-gutter gl"><pre class="lineno">1
-</pre></td><td class="rouge-code"><pre>![The flower](flower.png)
+</pre></td><td class="rouge-code"><pre>![The figure](figures.png)
 </pre></td></tr></tbody></table></code></pre></div></div>
 
 <p>The output will be:</p>
 
 <div class="language-plaintext highlighter-rouge"><div class="highlight"><pre class="highlight"><code><table class="rouge-table"><tbody><tr><td class="rouge-gutter gl"><pre class="lineno">1
-</pre></td><td class="rouge-code"><pre>&lt;img src="/img/path/flower.png" alt="The flower"&gt;
+</pre></td><td class="rouge-code"><pre>&lt;img src="/assets/img/activities/figures.png" alt="The flower"&gt;
 </pre></td></tr></tbody></table></code></pre></div></div>
 
 <h3 id="preview-image">Preview Image</h3>
