deploy: 4fa0ce7845db19cba8ffb061d6b4432f0b2abd6e

--- a/templates/2023-12-01-markdown-text-and-typography.html
+++ b/templates/2023-12-01-markdown-text-and-typography.html
@@ -118,7 +118,7 @@
 
 <h2 id="footnote">Footnote</h2>
 
-<p>Click the hook will locate the footnote<sup id="fnref:footnote" role="doc-noteref"><a href="#fn:footnote" class="footnote" rel="footnote">1</a></sup>, and here is another footnote<sup id="fnref:fn-nth-2" role="doc-noteref"><a href="#fn:fn-nth-2" class="footnote" rel="footnote">2</a></sup>.</p>
+<p>Click the hook will locate the footnote<sup id="fnref:footnote"><a href="#fn:footnote" class="footnote" rel="footnote" role="doc-noteref">1</a></sup>, and here is another footnote<sup id="fnref:fn-nth-2"><a href="#fn:fn-nth-2" class="footnote" rel="footnote" role="doc-noteref">2</a></sup>.</p>
 
 <h2 id="inline-code">Inline code</h2>
 
@@ -213,10 +213,10 @@ Praesent maximus aliquam sapien. Sed vel neque in dolor pulvinar auctor. Maecena
 
 <div class="footnotes" role="doc-endnotes">
   <ol>
-    <li id="fn:footnote" role="doc-endnote">
+    <li id="fn:footnote">
       <p>The footnote source <a href="#fnref:footnote" class="reversefootnote" role="doc-backlink">&#8617;</a></p>
     </li>
-    <li id="fn:fn-nth-2" role="doc-endnote">
+    <li id="fn:fn-nth-2">
       <p>The 2nd footnote source <a href="#fnref:fn-nth-2" class="reversefootnote" role="doc-backlink">&#8617;</a></p>
     </li>
   </ol>
